--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
   "require": {
     "php": ">=7.2",
     "ext-curl": "*",
-    "phpunit/phpunit": "~4.8||~6.0",
+    "phpunit/phpunit": "^8 | ^9 | ^10",
     "authorizenet/authorizenet": ">=1.9.3 || <2.0"
   },
   "minimum-stability": "dev"
